--- a/main.css
+++ b/main.css
@@ -5,6 +5,29 @@ body {
     background-color: green;
 } 
 
+.topnav {
+    background-color: black;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+}
+
 h1 {
     color: red;
     font-size: 60px;
@@ -42,4 +65,9 @@ table, th, td {
 table {
     /* width: 100px; */
     border-collapse: collapse;
+}
+
+h4 {
+    color: darkgray;
+    font-size: 50px;
 }
